fixed alignment

--- a/registration_numbers.css
+++ b/registration_numbers.css
@@ -44,6 +44,15 @@
     margin: 1em;
     list-style-type: none;
     -webkit-box-align: center;
+}
+
+.container1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 1em;
+    list-style-type: none;
+    -webkit-box-align: center;
 
 }
 
